--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        margin-top: 2rem;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -31,42 +32,44 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <nav class="navbar container">
+    <nav class="navbar flex container">
       <div class="navbar__logo">
         <img src="images/logo.svg" alt="Logo of the app" />
       </div>
       <ul class="navbar__links">
-        <li>Product</li>
-        <li>Features</li>
-        <li>Pricing</li>
-        <li>Login</li>
+        <li><a href="#!">Product</a></li>
+        <li><a href="#!">Features</a></li>
+        <li><a href="#!">Pricing</a></li>
+        <li><a href="#!">Login</a></li>
       </ul>
       <div class="navbar__hamburger">
-        <img src="images/icon-hamburger.svg" alt="Icon of a hamburger menu" />
+        <img src="images/icon-hamburger.svg" alt="Icon of an hamburger menu" />
       </div>
     </nav>
 
-    <main class="main container flex">
-      <div class="main__img">
-        <img
-          src="images/illustration-devices.svg"
-          alt="Illustration of devices"
-        />
-      </div>
-      <div class="main__text">
-        <div class="flex announce">
-          <span class="pill">New</span>
-          <span class="muted-text">Monograph Dashboard</span>
+    <main>
+      <div class="hero container flex">
+        <div class="hero__img">
+          <img
+            src="images/illustration-devices.svg"
+            alt="Illustration of devices"
+          />
         </div>
+        <div class="hero__text">
+          <div class="flex announce">
+            <span class="pill">New</span>
+            <span class="muted-text">Monograph Dashboard</span>
+          </div>
 
-        <h1 class="main-title">Powerful insights into your team</h1>
-        <p class="desc-text">
-          Project planning and time tracking for agile teams
-        </p>
+          <h1 class="main-text">Powerful insights <br> into your team</h1>
+          <p class="desc-text">
+            Project planning and time tracking <br> for agile teams
+          </p>
 
-        <div class="flex announce">
-          <button class="btn">Schedule a demo</button>
-          <span class="muted-text">to see a live preview</span>
+          <div class="flex announce">
+            <button class="btn">Schedule a demo</button>
+            <span class="muted-text">to see a live preview</span>
+          </div>
         </div>
       </div>
     </main>
